1.9.10.dev0
 * #987: Fix a "list" action error when the "encryption_passcommand" option is set.

1.9.9
 * #635: Log the repository path or label on every relevant log message, not just some logs.
 * #961: When the "encryption_passcommand" option is set, call the command once from borgmatic to
   collect the encryption passphrase and then pass it to Borg multiple times. See the documentation
   for more information: https://torsion.org/borgmatic/docs/how-to/provide-your-passwords/
 * #981: Fix a "spot" check file count delta error.
 * #982: Fix for borgmatic "exclude_patterns" and "exclude_from" recursing into excluded
   subdirectories.
 * #983: Fix the Btrfs hook to support subvolumes with names like "@home" different from their
   mount points.
 * #985: Change the default value for the "--original-hostname" flag from "localhost" to no host
   specified. This way, the "restore" action works without a hostname if there's a single matching
   database dump.

1.9.8
 * #979: Fix root patterns so they don't have an invalid "sh:" prefix before getting passed to Borg.
 * Expand the recent contributors documentation section to include ticket submitters—not just code
   contributors—because there are multiple ways to contribute to the project! See:
   https://torsion.org/borgmatic/#recent-contributors

1.9.7
 * #855: Add a Sentry monitoring hook. See the documentation for more information:
   https://torsion.org/borgmatic/docs/how-to/monitor-your-backups/#sentry-hook
 * #968: Fix for a "spot" check error when a filename in the most recent archive contains a newline.
 * #970: Fix for an error when there's a blank line in the configured patterns or excludes.
 * #971: Fix for "exclude_from" files being completely ignored.
 * #977: Fix for "exclude_patterns" and "exclude_from" not supporting explicit pattern styles (e.g.,
   "sh:" or "re:").

1.9.6
 * #959: Fix an error in the Btrfs hook when a subvolume mounted at "/" is configured in borgmatic's
   source directories.